# py-canoe

./: .gitignore  README.md  README_CN.md  pyproject.toml
scripts/: run_pytests_with_report.bat  run_robot_framework_tests.bat
src/py_canoe/: __init__.py  canoe.py  canoe_robot_lib.py
src/py_canoe/core/: application.py  bus.py  configuration.py  environment.py  networks.py  system.py
src/py_canoe/core/child_elements/: bus.py  buses.py  database_setup.py  diagnostic.py  environment_array.py  environment_group.py  environment_info.py  environment_variable.py  mc_ecus.py  modules.py  test_case.py  test_configuration_report.py  test_configurations.py  test_environment.py  test_environments.py  test_module.py  test_modules.py
src/py_canoe/helpers/: common.py  exceptions.py  gen_canoe_robot_lib.py
tests/: conftest.py  test_py_canoe.py  test_unit_server_friendly.py  test_unit_simulation_setup_buses.py  test_unit_system_variable_enum.py  test_unit_test_module.py
tests/demo_cfg/: demo_dev.cfg
tests/demo_cfg/Panels/: sys_var_demo_panel.xvp
tests/robot_tests/: test_py_canoe.robot
