[project]
name = "py-canoe"
version = "26.3.0"
description = "Python 🐍 Package for accessing Vector CANoe 🛶 Tool via COM Interface"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["Vector", "CANoe", "Python","Test", "Automation"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "pywin32",
]

[project.scripts]
py-canoe = "py_canoe:main"

[project.optional-dependencies]
robot = ["robotframework"]
database = ["canmatrix[arxml,ldf,xls,xlsx,yaml]", "lxml>=6.1.1"]
restapi = ["fastapi[standard]"]
plot = ["plotly",]
report = ["plotly",]
all = [
    "robotframework",
    "fastapi[standard]",
    "canmatrix[arxml,ldf,xls,xlsx,yaml]",
    "plotly",
    "lxml>=6.1.1",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-html",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-cov",
    "pytest-watch",
    "mkdocs-puml",
    "mkdocs-exclude",
    "mkdocs-material<10",
    "mkdocs-jupyter",
    "mkdocstrings-python",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
]

[project.urls]
homepage = "https://github.com/chaitu-ycr/py-canoe"
repository = "https://github.com/chaitu-ycr/py-canoe"
documentation = "https://chaitu-ycr.github.io/py-canoe/"

[tool.uv]
package = true

[tool.pytest.ini_options]
markers = [
    "integration: Integration tests requiring CANoe COM interface",
    "unit: Unit tests with mocks (default)",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
